# Inkweaver

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PRD.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.trae/documents/: 设计FastAPI后端目录结构和核心数据模型.md
alembic/: env.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: beats.py  books.py  chapters.py  codex.py  router.py  volumes.py
app/core/: config.py
app/crud/: base.py  beats.py  books.py  chapters.py  codex.py  volumes.py
app/db/: base.py  session.py  vector.py
app/models/: __init__.py
app/schemas/: beats.py  books.py  chapters.py  codex.py  volumes.py
app/services/: book_service.py  codex_service.py  outline_service.py  workflow_service.py
inkweaver-frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
inkweaver-frontend/app/: globals.css  page.tsx
inkweaver-frontend/app/(dashboard)/: layout.tsx
inkweaver-frontend/app/(dashboard)/codex/: page.tsx
inkweaver-frontend/app/(dashboard)/editor/: page.tsx
inkweaver-frontend/app/(dashboard)/outline/: page.tsx
inkweaver-frontend/components/codex/: CodexEntityCard.tsx
inkweaver-frontend/components/editor/: TipTapEditor.tsx
inkweaver-frontend/components/outline/: OutlineTree.tsx
inkweaver-frontend/stores/: useAppStore.ts
inkweaver-frontend/types/: index.ts
