[tool.poetry]
name = "app"
version = "0.1.0"
description = "AI-driven novel writing platform with cascading outline generation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"

# Web Framework
fastapi = "^0.104.1"
uvicorn = { extras = ["standard"], version = "^0.24.0.post1" }

# Database
"sqlalchemy" = { extras = ["asyncio"], version = "^2.0.23" }
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pgvector = "^0.2.0"

# AI and Workflow
langgraph = "^0.3.0"
langchain = "^0.3.0"
langchain-anthropic = "^0.3.0"

# Configuration
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# uv configuration is handled by command line arguments
